<resources>
    <string name="app_name">PD Assistant</string>
    <string name="permission_tips">We still need these permission:</string>
    <string name="permission_granted">Granted permission:</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_remained">%d permission remained</string>
    <string name="btn_add">ADD</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="btn_upload">UPLOAD</string>
    <string name="btn_upload_all">UPLOAD ALL</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_stop_record">Finish Recording</string>
    <string name="btn_next_btn">Next</string>
    <string name="about">Smart Healthcare For Parkinson\'s Disease Joint Center</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="input_hint">Hint</string>
    <string name="input_full_hint">Valid number is 6 digits, your input is full, please click ok to validate or delete to re-enter the answer.</string>
    <string name="btn_begin">BEGIN</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_finish">Complete</string>
    <string name="btn_save">Save</string>
    <string name="btn_start_record">Start Recording</string>
    <string name="cannot_recover">Pay attention: it cannot been recovered</string>
    <string name="change_volume">Please turn up the volume to hear tips</string>
    <string name="count_hint">Please input the numbers</string>
    <string name="count_right_answer">The right answer is %1$s</string>
    <string name="count_times">Correct! You have tried %1$d times, and you input:</string>
    <string name="count_tips">Remember the following numbers plaese, and make a choice butween picture version and sound version to start the test</string>
    <string name="count_wrong_answer">Wrong answers! \nYou have tried %1$d times</string>
    <string name="countt_input_rightanswer">Right answer!</string>
    <string name="countt_input_wronganswer">Wrong answer!</string>
    <string name="countt_right_answer">Right answer:</string>
    <string name="countt_try_input">Your inputs:</string>
    <string name="default_feedback">There have been no primary evaluation.</string>
    <string name="device">Wait...</string>
    <string name="dialog_content">Save this test?</string>
    <string name="dialog_title">Test result</string>
    <string name="doctor_name">Doctor\'s name:</string>
    <string name="doctor_name_hint">Please the doctor\'s name</string>
    <string name="eight">8</string>
    <string name="face_finish_error">Video recording failure, error:</string>
    <string name="face_task_1">Close your eye!</string>
    <string name="face_task_2">Look forward!</string>
    <string name="face_task_3">Smile and show your teeth!</string>
    <string name="five">5</string>
    <string name="face_tips">The test would record your face, hold on the phone and make sure your face in the screen. Please listen to the tips, do as what you\'re told.</string>
    <string name="four">4</string>
    <string name="initial_result">Initial evaluation:</string>
    <string name="input_doctor_name">Please input the doctor\'s name and rate the test</string>
    <string name="logs">Not realised</string>
    <string name="module_count">Remember Numbers</string>
    <string name="module_face">Poker Face</string>
    <string name="module_sound">Sound</string>
    <string name="module_stand">Stand Balance</string>
    <string name="module_stride">Stride Balance</string>
    <string name="module_tapper">Finger Tapping</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="page_exam">Test</string>
    <string name="page_history">History</string>
    <string name="page_user">User</string>
    <string name="page_setting">Setting</string>
    <string name="please_evaluate">Please evaluate this test:</string>
    <string name="rating">Rating:</string>
    <string name="save_success">Save completed</string>
    <string name="second_back">Click again to exit</string>
    <string name="setting_about">About us</string>
    <string name="setting_logs">Running logs</string>
    <string name="setting_device">Device info</string>
    <string name="setting_support">Support and help</string>
    <string name="setting_tips">Not realised</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="sound_complete">Complete</string>
    <string name="sound_recoding">Recording...</string>
    <string name="sound_task_1">"The test would record your voice, Please answer the following questions loudly. Press the button if you're ready. "</string>
    <string name="stand_chooseFoot">Choose the foot:</string>
    <string name="stand_image_description">Image</string>
    <string name="stand_left">left</string>
    <string name="stand_right">right</string>
    <string name="stand_tips">Hold your phone, cross your arms and stand on the single foot for 10 seconds. Please press the button to start.</string>
    <string name="stride_btn_text">\" %1$d // %2$d trails\"</string>
    <string name="stride_distance">Distance</string>
    <string name="stride_image_description">Image</string>
    <string name="stride_main_tip">Place your phone before the chest, do stand up, walk, turn around, walk and sit down. Press the button to start.</string>
    <string name="stride_next_turn">\"The %1$d trail, there are %2$d trails\"</string>
    <string name="stride_prepare">Please prepare</string>
    <string name="stride_testing">Testing</string>
    <string name="stride_trail_numbers">Trails</string>
    <string name="support">Support: 010-62600809</string>
    <string name="tapper_count_down">Count down :%d</string>
    <string name="tapper_image_description">Image</string>
    <string name="tapper_index_finger">Index</string>
    <string name="tapper_main_hand">Choose testing hand</string>
    <string name="tapper_main_lefthand">left</string>
    <string name="tapper_main_righthand">right</string>
    <string name="tapper_main_tip">Press the button to start</string>
    <string name="tapper_middle_finger">Middle</string>
    <string name="tapper_tips">Press the two buttons with your index and middle fingers of the same hand for 10 seconds.</string>
    <string name="test_time">Time:</string>
    <string name="test_user">User:</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="upload_failed">\"Upload: %1$d completed, %2$d error\"</string>
    <string name="upload_success">Upload completed</string>
    <string name="user_age">Age</string>
    <string name="user_female">Female</string>
    <string name="user_gender">Gender</string>
    <string name="user_male">Male</string>
    <string name="user_name">User</string>
    <string name="user_tips">Choose a user or create one</string>
    <string name="welcome_name">ICT XWHCMU\n v1.2</string>
    <string name="welcome_tip">Smart Healthcare For Parkinson\'s Disease Joint Center</string>
    <string name="zero">0</string>
    <string name="attention">Attention</string>
    <string name="not_support">Your device cannot support this test.</string>
    <string name="count_test_version_sound">Sound Version</string>
    <string name="count_test_version_picture">Picture Version</string>
    <string name="count_listen_carefully_begin">Please listen carefully and remember numbers, now let\'s begin</string>
    <string name="count_listen_carefully_finish">Please listen carefully and remember numbers</string>
    <string name="count_sim_delete">delete</string>
    <string name="count_sim_clear">clear</string>
    <string name="count_sim_input">Please input numbers</string>
    <string name="user_clinicalnumber">Clinical Number</string>
    <string name="user_studynumber">Study Number</string>
    <string name="user_identification">Identification</string>
    <string name="tips_medical_info">Please fulfill the following form carefully! </string>
    <string name="take_pd_medicine">Are you taking medicines for PD?</string>
    <string name ="clinical_status_current">Current clinical status:</string>
    <string name="take_left_medicine">Are you taking levodopa drugs？</string>
    <string name="time_since_last">Time from last medicine (min)：</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_era">Open Era</string>
    <string name="close_era">Close Era</string>


    <!--Evaluation guide-->
    <string name="pd_level">PD等级</string>
    <string name="evaluation_guide_name">评分指导</string>
    <string name="evaluation_guide_count">数字记忆评估</string>
    <string name="evaluation_guide_face">0：正常：正常的面部表情。\n1：轻微：轻度的面具脸，仅有瞬目频率的减少。\n2：轻度：除了瞬目频率减少外，下面部也有表情减少，也即口周的运动减少，如自发性微笑减少，但嘴唇没有分开。\n3：中度：有面具脸，嘴唇在嘴部不动时有时会张开。\n4：重度：有面具脸，嘴唇在嘴部不动时大多数情况下是张开的。</string>
    <string name="evaluation_guide_sound">0：正常：没有言语问题。\n1：轻微：丧失正常的音调，发音或音量，但所有的字句仍能很容易听懂。\n2：轻度：丧失正常的音调，发音或音量，有少数字句不清楚，但总体上语句还是能较容易听懂。\n3：中度：患者语言难以理解。尽管不是所有的语句都难以听懂，但至少是有一些已很难听懂。\n4：重度：患者大部分的语言难以听懂或难以理解</string>
    <string name="evaluation_guide_stand">0：正常：没有问题，可以快速毫不迟疑的站起来。\n1：轻微：站起来的速度比正常慢；或是需要尝试一次以上；或是需要往前坐才能站起来。但是不需要扶扶手。\n2：轻度：自己手扶扶手即可轻松站起来。\n3：中度：需要扶扶手，但容易再跌回椅子上；或是需要尝试一次以上才能扶着扶手站起来，但还是不需要别人帮助。\n4：重度：没有别人帮助的情况下站不起来。</string>
    <string name="evaluation_guide_stride">0：正常：没有问题。\n1：轻微：轻微的步态损害但可以独立行走。\n2：轻度：有明显的步态损害但还可以独立行走。\n3：中度：需要辅助工具才能安全的行走（拐杖或助行器）但不需要别人的帮助。\n4：重度：完全不能行走或是只有在别人的帮助下才能行走。</string>
    <string name="evaluation_guide_tapper">0：正常：没有问题。\n1：轻微：有下列情形之一：a）手指拍打动作的正常节律被一次或两次中断或迟疑打断；b）动作轻微变慢；c）手指拍打的幅度在接近第10次时减小。\n2：轻度： 有下列情形之一：a）在手指拍打的过程中有3到5次的停顿。b）动作轻度缓慢；c）手指拍打的幅度在拍打次数到一半时即开始减小。\n3：中度：有下列情形之一：a）手指拍打过程中有5次以上的停顿或是至少有一次较长时间的冻结（僵住）；b）动作中度变慢；c）手指拍打的幅度从拍打的第一次即开始逐渐减小。\n4：重度：由于动作的迟缓，中断或是幅度的减少患者不能或是几乎不能完成此项动作。</string>
    <string name="evaluation_guide_none">暂无提示</string>

</resources>

