<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.sound.FirstFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/module_sound"
        android:textColor="@color/freebie_4"
        android:textSize="@dimen/material_component_text_title_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sound_task_1"
        android:textSize="@dimen/material_component_text_title_text_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/yuyin1"/>

    <Button
        android:id="@+id/btn_start_recorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryButton"
        android:text="@string/btn_start_record" />

</LinearLayout>
