<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/freebie_9"
    android:paddingStart="@dimen/material_layout_keylines_screen_edge_margin"
    android:paddingEnd="@dimen/material_layout_keylines_screen_edge_margin"
    android:paddingTop="@dimen/material_component_cards_primary_title_top_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/module_stand"
        android:textColor="@color/freebie_4"
        android:textSize="@dimen/material_component_text_title_text_size" />

    <ImageView
        android:contentDescription="@string/stand_image_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:src="@drawable/iv_stand_example"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/bt_begin"
        android:text="@string/btn_begin"
        android:layout_gravity="bottom"
        style="@style/PrimaryButton"/>
</LinearLayout>

